# EdgeSpark

./: .gitignore  CLAUDE.md  EXPERIMENT_SUMMARY.md  EdgeSpark_Project_Summary.md  HYBRID_APPROACH_PLAN.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  dataset_loader.py  final_evaluation_fixed.py  network_improved.py  note.md  pyproject.toml  quick_improved_test.py  run_contour_extraction.sh  run_hybrid_experiment.py  run_training.sh  test_final_approaches.py  test_script.sh  train.py
Data Generation Code/: 1_cut_image.py  2_get_gt_pair.py  3_divide_data.py
PairingNet Code/: PairingNet_train_val_test.py  README_CONTOUR_EXTRACTION.md  contour_feature_extractor.py  extract_contour_module.py  run.py  test_contour_extractor.py  train_stage1.py
PairingNet Code/utils/: NDCG.py  config.py  pipeline.py  (+2 more)
analysis_tools/: visualize_results.py
config/: pyproject.toml
data-analyze/: check_data.py  check_image.py  check_pkl.py  filter_pkl.py
docs/: CLAUDE.md  FINAL_IMPROVEMENT_RESULTS.md  FOLDER_STRUCTURE.md  HYBRID_EXPERIMENT_RESULTS.md  PROJECT_README.md  PROJECT_STRUCTURE.md  note.md
feature_visualizations_20250718_150334/: feature_analysis.json
final_approach/: final_approach.py  network_minimal.py
final_improvements/: comprehensive_evaluation.py  fourier_approach.py
hybrid_approach/: hybrid_network.py  hybrid_train.py
original_code/: dataset_loader.py  network_improved.py  train.py
simplified_approach/: network_simple.py
test_results/: ndcg_evaluation_20250718_124116.json  ndcg_evaluation_20250718_124153.json  similarity_matrix_20250718_124153.npy
(+35 files in other folders)
