[project]
name = "edgespark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "seaborn>=0.12.0",
    "tqdm>=4.67.1",
]
[tool.uv]
index-strategy = "unsafe-best-match"
extra-index-url = [
	"https://download.pytorch.org/whl/cu118"
]
